--- a/sbb/src/main/resources/templates/question_list.html
+++ b/sbb/src/main/resources/templates/question_list.html
@@ -5,7 +5,7 @@
     <tr>
         <th>번호</th>
         <th style="width: 50%">제목</th>
-        <th>글쓴이</th>>
+        <th>글쓴이</th>
         <th>작성일시</th>
     </tr>
     </thead>
